# StreamlitApps

./: BetaPDF.py  CorrelationVsCausality.md  CorrelationVsCausality.py  DCT.py  GaussElimination.py  GaußElimination.py  Video.py  VideoReduce.py  add_social_links.py  bayes.py  card.py  cleaner.py  covariance.py  determinant.py  diagonalisation.py  imagecompression.py  logisticmap.py  lottery_probability.py  main.py  mdtopdf.py  pyproject.toml  qrcodeGenerate.py  quant.py  ttest.py
