[project]
name = "streamlitapps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "demucs>=4.0.1",
    "dowhy>=0.12",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "pandas>=2.3.3",
    "pikepdf>=10.8.0",
    "plotly>=6.8.0",
    "polars>=1.40.1",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "statsmodels>=0.14.6",
    "streamlit>=1.55.0",
    "whisper>=1.1.10",
    "yfinance>=1.2.0",
]

